Tried lots of different fixes for the problem with SVG backgrounds not showing.

--- a/src/www/public/css/main.css
+++ b/src/www/public/css/main.css
@@ -25,15 +25,17 @@
   transition: opacity 150ms ease-in;
 }
 
+html, body {
+    height: 100%
+}
+
 #backgroundImage {
-  background: url(../../public/pics/background.svg) no-repeat center fixed;
+  background-image: url(../../public/pics/background.svg);
+  background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   z-index: 1;
-  position: fixed;
-  top: 0;
-  left: 0;
   display: block;
   -webkit-filter: blur(10px) grayscale(0.3);
 }
